logistic_frontend/src/pages/auth/Register.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html, body {
  width: 100vw;
  height: 100vh;
}

.background {
    padding-top: 97px;
}

.background {
    background: radial-gradient(circle, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.489) 100%),
                rgba(121, 189, 143, 1);
    background-size: cover;
    background-position: 130px;
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0;
}

.register-form {
    width: 480px;
    height: 880px;
    padding: 30px;
    background-color: rgba(253, 255, 245, 1);
    border-radius: 15px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
    margin: 0 auto;
    padding: 0;
}

.register-form h2 {
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
    font-size: 48px;
    color: rgba(0, 0, 0, 1);
    text-align: center;
    margin-bottom: 0px;
    margin-top: 0;
    padding-top: 26px;
}

.underline-wrapper {
    display: inline-block;
    border-bottom: 1px solid black;
    margin-left: 11px;
    margin-right: 11px;
    margin-bottom: 28px;
    width: 458px;
}

.form-group {
    margin: 0;
    margin-left: 36px;
}

.form-group p {
    margin: 0;
    font-family: 'Roboto', sans-serif;
    font-size: 24px;
    font-weight: 400;
}

.email p {
    margin-bottom: 19px;
}

.email input {
    margin-bottom: 22px;
}

.login p {
    margin-bottom: 15px;
}

.login input {
    margin-bottom: 23px;
}

.phone p {
    margin-bottom: 19px;
}

.phone input {
    margin-bottom: 23px;
}

.password p {
    margin-bottom: 14px;
}

.password input {
    margin-bottom: 23px;
}

.password-confirm p {
    margin-bottom: 19px;
}

.password-confirm input {
    margin-bottom: 29px;
}

.form-group input {
    width: 398px;
    height: 45px;
    border: 1px solid rgba(0, 0, 0, 1);
    border-radius: 15px;
    color: rgba(255, 255, 255, 0);
    box-sizing: border-box;
}

.checkbox-group {
    display: flex;
    align-items: center;
    margin-bottom: 63px;
}

.checkbox-group input {
    margin-left: 36px;
    margin-right: 10px;
}

.checkbox-group label {
    font-family: 'Roboto', sans-serif;
    font-size: 15px;
    color: rgba(0, 0, 0, 1);
    font-weight: 400;
}

button {
    width: 225px;
    height: 45px;
    background-color: rgba(121, 189, 143, 1);
    border: solid 1px rgba(0, 0, 0, 1);
    border-radius: 15px;
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-size: 20px;
    color: rgba(0, 0, 0, 1);
    cursor: pointer;
    transition: background-color 0.3s ease;
    margin-left: 137px;
}

button:hover {
    background-color: #6aa77d;
}

button:active {
    background-color: #5a8f6d;
}

